--- a/src/template/index.ejs
+++ b/src/template/index.ejs
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang='en'>
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="<%= theme %>>" />
+    <meta charset='utf-8' />
+    <link rel='icon' href='%PUBLIC_URL%/favicon.ico' />
+    <meta name='viewport' content='width=device-width, initial-scale=1' />
+    <meta name='theme-color' content='<%= theme %>>' />
     <meta
-      name="description"
-      content="<%= desc %>"
+      name='description'
+      content='<%= desc %>'
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel='manifest' href='%PUBLIC_URL%/manifest.json' />
     <title><%= name %></title>
 
-    <script type="text/javascript">
+    <script type='text/javascript'>
       // Single Page Apps for GitHub Pages
       // https://github.com/rafrex/spa-github-pages
       // Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
@@ -46,6 +46,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <div id="root"/>
+    <div id='root'/>
   </body>
 </html>
